--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.7.0"
+    "mysql2": "^3.7.0",
+    "nodemon": "^3.0.2"
   }
 }
