--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "stripe": "^14.12.0",
+    "uuid": "^9.0.1"
   }
 }
