--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "stripe": "^14.12.0",
+    "twilio": "^4.21.0",
     "uuid": "^9.0.1"
   }
 }
