--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.2",
+    "match-sorter": "^6.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
