--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,9 +23,11 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
